258-2nd dev slaveshow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ add_compile_options(-std=c++14 -pthread)
 # add_definitions(-DCAM_IMX390 -DDEV_MODE -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX390 -DDEV_MODE -DDISTRIBUTED_STRUCT)
 # add_definitions(-DCAM_IMX424 -DDEV_MODE -DCENTRIC_STRUCT)
-add_definitions(-DCAM_IMX424 -DCENTRIC_STRUCT)
+# add_definitions(-DCAM_IMX424 -DCENTRIC_STRUCT)
+add_definitions(-DCAM_IMX424 -DYUYVCAM  -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX424)
 # add_definitions(-DYUYVCAM -DCAM_IMX424 -DDEV_MODE)
 # add_definitions(-DYUYVCAM -DCAM_IMX424)
