--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,9 @@ message(STATUS "CMAKE_CURRENT_SOURCE_DIR:::${CMAKE_CURRENT_SOURCE_DIR}")
 # add_compile_options(-std=c++14 -g )
 add_compile_options(-std=c++14 -pthread)
 # add_definitions(-DDEBUG)
-# add_definitions(-DCAM_IMX390 -DDEV_MODE -DCENTRIC_STRUCT)
+add_definitions(-DCAM_IMX390 -DDEV_MODE -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX390 -DCENTRIC_STRUCT)
-add_definitions(-DCAM_IMX390 -DEXPORT_SO -DCENTRIC_STRUCT)
+# add_definitions(-DCAM_IMX390 -DEXPORT_SO -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX390 -DDEV_MODE -DDISTRIBUTED_STRUCT)
 # add_definitions(-DCAM_IMX424 -DDEV_MODE -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX424 -DCENTRIC_STRUCT)
@@ -101,7 +101,7 @@ include_directories(
 # add_executable(sd src/stitching_detailed.cpp )
 # add_executable(mo src/stithermo.cpp )
 # add_executable(testocv src/testocv.cpp  ${NVENCODER_SOURCE} ${COMMONCLSFILES})
-add_executable(testocv src/testocv.cpp src/imageProcess.cpp src/PracticalSocket.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+add_executable(testocv src/testocv.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
 add_executable(cameracuda src/camera_v4l2-cuda.cpp ${COMMONCLSFILES})
 # add_executable(server src/Server.cpp  src/PracticalSocket.cpp)
 
