add xavier code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ message(STATUS "  CMAKE_CURRENT_SOURCE_DIR：${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(CUDA_NVCC_FLAGS -G;-g;-std=c++11) # nvcc flags
 
+add_subdirectory(cudasrc)
+include_directories(cudasrc)
 
 include_directories(
     ${CUDA_INCLUDE_DIRS}
@@ -20,19 +22,35 @@ include_directories(
 
 set(OpenCV_DIR "/usr/local/share/OpenCV/OpenCVConfig.cmake")
 find_package( OpenCV REQUIRED )
+find_package(OpenGL REQUIRED)
+find_package(GLUT REQUIRED)
+
 
 message(STATUS "OpenCV版本: ${OpenCV_VERSION}")
 message(STATUS "    头文件目录：${OpenCV_INCLUDE_DIRS}")
 message(STATUS "    库文件目录：${OpenCV_LIB_DIR}")
 message(STATUS "    库文件列表：${OpenCV_LIBS}")
+message(STATUS "OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
+message(STATUS "OpenGL lib: ${OPENGL_LIBRARY}")
+message(STATUS "GLUT_LIBRARY: ${GLUT_LIBRARY}")
 
 add_compile_options(-std=c++11 -g)
 # add_definitions(-DDEBUG)
 
 add_executable(cvtest cvstitching.cpp)
-add_executable(camera camera.cpp)
+# add_executable(camera camera.cpp)
 add_executable(main main.cpp )
-target_link_libraries(cvtest ${OpenCV_LIBS} ${CUDA_LIBRARIES})
-target_link_libraries(main ${OpenCV_LIBS} ${CUDA_LIBRARIES})
-target_link_libraries(camera ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
- -L/opt/MVS/lib/64 MvCameraControl.so)
+add_executable(xavier xavier.cpp )
+add_executable(sti sti.cpp )
+add_executable(sd stitching_detailed.cpp )
+add_executable(mo stithermo.cpp )
+# add_executable(calib calib.cpp )
+target_link_libraries(cvtest yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
+target_link_libraries(main yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
+target_link_libraries(xavier  yuyv2rgb ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries(sti   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+# target_link_libraries(calib   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+# target_link_libraries(camera ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
+#  -L/opt/MVS/lib/64 MvCameraControl.so)
