--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(xavier xavier.cpp )
 add_executable(sti sti.cpp )
 add_executable(sd stitching_detailed.cpp )
 add_executable(mo stithermo.cpp )
+add_executable(testocv testocv.cpp )
 # add_executable(calib calib.cpp )
 target_link_libraries(cvtest yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
 target_link_libraries(main yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
@@ -51,6 +52,7 @@ target_link_libraries(xavier  yuyv2rgb ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_L
 target_link_libraries(sti   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 # target_link_libraries(calib   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 # target_link_libraries(camera ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
 #  -L/opt/MVS/lib/64 MvCameraControl.so)
