--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ add_compile_options(-std=c++11 -g)
 add_executable(cvtest cvstitching.cpp)
 # add_executable(camera camera.cpp)
 add_executable(main main.cpp )
-add_executable(xavier xavier.cpp )
+add_executable(xavier xavier.cpp PracticalSocket.cpp )
 add_executable(sti sti.cpp )
 add_executable(sd stitching_detailed.cpp )
 add_executable(mo stithermo.cpp )
