--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ add_executable(camshow src/camshow.cpp src/PracticalSocket.cpp  ${NVENCODER_SOUR
 add_executable(sti src/sti.cpp )
 add_executable(sd src/stitching_detailed.cpp )
 add_executable(mo src/stithermo.cpp )
-add_executable(testocv src/testocv.cpp )
+add_executable(testocv src/testocv.cpp src/imageProcess.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
 add_executable(cameracuda src/camera_v4l2-cuda.cpp ${COMMONCLSFILES})
 add_executable(master src/master.cpp src/imageProcess.cpp src/PracticalSocket.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
 
@@ -109,6 +109,7 @@ target_link_libraries(${PROJECT_NAME}
   ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
   -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
   )
+
 # target_link_libraries(cvtest yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
 # target_link_libraries(main yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
 # target_link_libraries(xavier  yuyv2rgb ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
@@ -116,7 +117,6 @@ target_link_libraries(${PROJECT_NAME}
 # target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 # target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
 # target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
-
 
 target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/cfg/libtkDNN.so")
 target_link_libraries(${PROJECT_NAME} "/usr/local/cuda/lib64/libcudart.so")
@@ -134,8 +134,6 @@ target_link_libraries(${PROJECT_NAME} "/usr/lib/aarch64-linux-gnu/libGLESv2.so")
 target_link_libraries(${PROJECT_NAME} "/usr/lib/aarch64-linux-gnu/libv4l2.so")
 target_link_libraries(${PROJECT_NAME}  "/usr/lib/aarch64-linux-gnu/libpthread.so")
 
-
-
 # add_executable(calib calib.cpp )
 # target_link_libraries(cvtest yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
 # target_link_libraries(main yuyv2rgb ${OpenCV_LIBS} ${CUDA_LIBRARIES})
@@ -147,17 +145,13 @@ target_link_libraries(camshow  yuyv2rgb ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_
 target_link_libraries(sti   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
 target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
 target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
-target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
+target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+ -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+-L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN)
 
-# link_directories(
-#     "/usr/lib/aarch64-linux-gnu/tegra/"
-# )
 target_link_libraries(cameracuda  
     -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
     -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
      ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
      )
-
-# target_link_libraries(calib   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${GLUT_LIBRARY})
-# target_link_libraries(camera ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
-#  -L/opt/MVS/lib/64 MvCameraControl.so)
