add yaml cfg in api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ set(CUDIR /usr/src/jetson_multimedia_api/samples/common/algorithm/cuda)
 set(COMMONCLS /usr/src/jetson_multimedia_api/samples/common/classes)
 
 
-add_subdirectory(cudasrc)
-include_directories(cudasrc)
+# add_subdirectory(cudasrc)
+# include_directories(cudasrc)
 
 set(OpenCV_DIR "/usr/local/share/OpenCV/OpenCVConfig.cmake")
 find_package( OpenCV 3 REQUIRED )
@@ -158,11 +158,13 @@ target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
 #  -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
 # -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
 # spdlog::spdlog)
-target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
--L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN)
+
+# target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
+# -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+#  -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+#   ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+#   -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN)
+target_link_libraries(testocv  -lyaml-cpp)
 
 target_link_libraries(cameracuda  
     -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
@@ -171,10 +173,11 @@ target_link_libraries(cameracuda
      )
 
 target_link_libraries(panocam
-    ${OPENGL_LIBRARY} ${OpenCV_LIBS}
+    ${OPENGL_LIBRARY} ${OpenCV_LIBS} -lyaml-cpp
     -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
     -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
     -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+    
 )
 target_link_libraries(demo
     panocam)
