add argv parameters in yaml

--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -4,8 +4,9 @@ undistorWidth: 960
 undistorHeight: 540
 stitcherinputWidth: 480
 stitcherinputHeight: 270
-USED_CAMERA_NUM: 6
+USED_CAMERA_NUM: 4
 netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16.rt"
 # netpath: "/home/nvidia/ssd/model/yolo4tiny_fp16.rt"
 camcfgpath: "/home/nvidia/ssd/code/1221/cfg/390camcfg/"
 canname: "can0" 
+showall: false
