--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -6,10 +6,12 @@ camsrcheight: 1080
 distorWidth: 1920
 distorHeight: 1080
 # undistor size can only be 960x540 or 1920x1080
-undistorWidth: 1920
-undistorHeight: 1080
-stitcherinputWidth: 1920
-stitcherinputHeight: 1080
+undistorWidth: 960
+undistorHeight: 540
+stitcherinputWidth: 640
+stitcherinputHeight: 360
+
+undistor: false
 
 # parameters for renderer
 renderWidth: 960
@@ -22,6 +24,7 @@ renderBufHeight: 1080
 USED_CAMERA_NUM: 8
 netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16.rt"
 # netpath: "/home/nvidia/ssd/model/yolo4tiny_fp16.rt"
-camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
+camcfgpath: "../cfg/390camcfg/"
+# camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
 showall: true
