--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -2,7 +2,7 @@
 camsrcwidth: 1920
 camsrcheight: 1080
 # in general the distor img size should be the same with camera img origin size, otherwise there will be a high latency,
-# this parameter is kept only 4k camera
+# this parameter is kept only for 4k camera
 distorWidth: 1920
 distorHeight: 1080
 # undistor size can only be 960x540 or 1920x1080
@@ -20,6 +20,7 @@ renderX: 0
 renderY: 0
 renderBufWidth: 1920
 renderBufHeight: 1080
+renderMode: 0
 
 USED_CAMERA_NUM: 8
 netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16.rt"
