upgrade stitcher process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,10 @@ message(STATUS "CUDA_LIBRARIES:::${CUDA_LIBRARIES}")
 message(STATUS "CUDA_CUBLAS_LIBRARIES:::${CUDA_CUBLAS_LIBRARIES}")
 message(STATUS "CMAKE_CURRENT_SOURCE_DIR:::${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_compile_options(-std=c++14 -g )
+# add_compile_options(-std=c++14 -g )
+add_compile_options(-std=c++14 )
 # add_definitions(-DDEBUG)
-add_definitions(-DSPDLOG_DEBUG_ON )
+# add_definitions(-DSPDLOG_DEBUG_ON )
 add_definitions(-DCAM_IMX390)
 
 cuda_include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CUDA_INCLUDE_DIRS} )
