--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -6,7 +6,7 @@ camsrcheight: 1080
 distorWidth: 1920
 distorHeight: 1080
 # undistor size can only be 960x540 or 1920x1080
-undistor: false
+undistor: true
 undistorWidth: 960
 undistorHeight: 540
 stitcherinputWidth: 640
@@ -19,6 +19,7 @@ renderX: 0
 renderY: 0
 renderBufWidth: 1920
 renderBufHeight: 1080
+# 0 for egl, 1 for opencv
 renderMode: 1
 
 USED_CAMERA_NUM: 8
@@ -28,3 +29,5 @@ camcfgpath: "../cfg/390camcfg/"
 # camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
 showall: true
+
+loglvl: "debug"
