--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,3 +1,5 @@
+# camera vendor, 0:sensing, 1:lijing
+vendor: 1
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -9,8 +11,8 @@ distorHeight: 1080
 undistor: true
 undistorWidth: 960
 undistorHeight: 540
-stitcherinputWidth: 640
-stitcherinputHeight: 360
+stitcherinputWidth: 960
+stitcherinputHeight: 540
 
 # parameters for renderer
 renderWidth: 960
@@ -23,8 +25,11 @@ renderBufHeight: 1080
 renderMode: 1
 
 USED_CAMERA_NUM: 8
-netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16.rt"
+# netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1.rt"
+# netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1_new.rt"
+netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs4.rt"
 # netpath: "/home/nvidia/ssd/model/yolo4tiny_fp16.rt"
+# netpath: "/home/nvidia/ssd/model/yolo4_kitti_fp16_bs4.rt"
 camcfgpath: "../cfg/390camcfg/"
 # camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
@@ -36,3 +41,6 @@ loglvl: "debug"
 stitcherMatchConf: 0.3
 stitcherAdjusterConf: 0.7
 stitcherBlenderStrength: 0
+
+# parameters for detector
+batchSize: 1
